correction contraste

--- a/src/sass/components/_buttonstyle.scss
+++ b/src/sass/components/_buttonstyle.scss
@@ -14,8 +14,8 @@
   position: relative;
   padding: 15px 40px;
   border-radius: 50px;
-  background-color: #3498db;
-  color: #fff;
+  background-color: #3E46AC;
+  color: white;
   text-transform: uppercase;
   font-weight: bold;
   transition: all 0.3s ease; /* Transition fluide pour tous les changements */
