--- a/src/sass/components/_projectgrid.scss
+++ b/src/sass/components/_projectgrid.scss
@@ -55,7 +55,7 @@
 
     &-front {
       z-index: 2;
-      background-color: #fff;
+      background-color: white;
       border-radius: 25px;
       display: flex;
       align-items: center;
