--- a/src/sass/components/_projectlinks.scss
+++ b/src/sass/components/_projectlinks.scss
@@ -12,7 +12,7 @@
     .project-link {
       margin: 5px;
       padding: 8px;
-      background-color: #007bff;
+      background-color: #103256;
       color: white;
       text-decoration: none;
       border-radius: 100px;
